Add integer overflow protection for buffer size calculations
Prevent potential integer overflow vulnerabilities in buffer size
calculations that could lead to memory corruption or DoS attacks.

Changes:
- Add safe_math.h utility with overflow-checked arithmetic functions
- Protect HTTP check_sz() against malicious Content-Length values
- Protect Header::dump() reserve calculation against huge option counts
- Protect base64 encode/decode size calculations in Binary_data
- Add comprehensive unit tests for safe math operations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,6 +44,7 @@ iqxmlrpc_test(value-types-extended-test test_value_types_extended.cc)
 iqxmlrpc_test(method-dispatch-test test_method_dispatch.cc)
 iqxmlrpc_test(exceptions-test test_exceptions.cc)
 iqxmlrpc_test(socket-test test_socket.cc)
+iqxmlrpc_test(safe-math-test test_safe_math.cc)
 
 # Integration test (in-process server/client testing)
 iqxmlrpc_test(integration-test test_integration.cc methods.cc)
