Add security-focused fuzz targets for hostname parsing and method dispatch
Address high-priority security gaps identified in fuzzing review:

- Add fuzz_inet_addr: Tests hostname/IP parsing without DNS lookups,
  specifically targeting CRLF injection vulnerabilities in hostnames
- Add fuzz_dispatcher: Tests Method_dispatcher_manager including
  introspection methods and fuzzed method name registration
- Enhance fuzz_packet: Add chunked transfer-encoding body parsing tests
  to detect malformed chunk size and boundary handling issues

Security considerations:
- Hostname fuzzer validates rejection of injection patterns (\r, \n)
- Dispatcher fuzzer exercises all system.* introspection methods
- Chunked encoding tests various chunk sizes and boundaries

--- a/fuzz/CMakeLists.txt
+++ b/fuzz/CMakeLists.txt
@@ -42,6 +42,8 @@ set(FUZZ_TARGETS
   fuzz_serialize
   fuzz_num_conv
   fuzz_xheaders
+  fuzz_inet_addr
+  fuzz_dispatcher
 )
 
 foreach(target ${FUZZ_TARGETS})
