Add CRLF injection exploit tests for issue #137
Add comprehensive exploit tests demonstrating the HTTP header injection
vulnerability caused by missing CRLF sanitization.

Exploit tests prove 7 attack vectors:
1. Arbitrary header injection via XHeaders
2. Session fixation via Set-Cookie injection
3. Cache poisoning via Cache-Control injection
4. HTTP Response Splitting with XSS payload
5. CR-only injection (for susceptible parsers)
6. LF-only injection (HTTP/1.1 compliant parsers)
7. Direct set_option() injection

These tests currently PASS (proving the vulnerability exists).
After the fix is applied, the tests should be updated to verify
that CRLF characters are rejected with an exception.

Closes #137 (when fix is merged)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -47,6 +47,7 @@ iqxmlrpc_test(socket-test test_socket.cc)
 iqxmlrpc_test(safe-math-test test_safe_math.cc)
 iqxmlrpc_test(perf-utils-test test_perf_utils.cc)
 iqxmlrpc_test(security-test test_security.cc)
+iqxmlrpc_test(crlf-injection-test test_crlf_injection.cc)
 
 # Thread safety tests
 # NOTE: These tests stress-test Boost.Lockfree which produces TSan false positives.
