Add security edge case tests and vulnerability findings report
Add comprehensive security test suite covering:
- Integer boundary conditions (Content-Length overflow, UINT_MAX)
- CRLF injection vectors (headers, hostnames)
- XML depth limit enforcement (exceeds MAX_PARSE_DEPTH=32)
- Wide XML structure stress test (1000 siblings)
- Base64 decoder edge cases (empty, padding, invalid chars, nulls)
- HTTP request smuggling scenarios (mixed line endings)

Include security bug hunt findings report documenting:
- Socket/SSL integer truncation vulnerabilities (size_t to int)
- Content-Length boundary value concerns
- SSL exception constructor crash potential
- Wide XML DoS potential
- Request smuggling considerations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,6 +50,7 @@ iqxmlrpc_test(security-test test_security.cc)
 iqxmlrpc_test(crlf-injection-test test_crlf_injection.cc)
 iqxmlrpc_test(e1-e3-optimization-test test_e1_e3_optimization.cc)
 iqxmlrpc_test(num-conv-test test_num_conv.cc)
+iqxmlrpc_test(security-edge-cases-test test_security_edge_cases.cc)
 
 # Thread safety tests
 # NOTE: These tests stress-test Boost.Lockfree which produces TSan false positives.
